--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Quizz</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="theme/index.css">
 </head>
 <body onload="NextQuestion(0)">
     <main>
@@ -88,6 +88,6 @@
 
         </div>
     </main>
-    <script src="index.js"></script>
+    <script src="theme/index.js"></script>
 </body>
 </html>
